crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_01_nil.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--scopes"
  stdin: nil;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m(program
   (expr nil))
[0mλ» [1m[0m
----- stderr -----
