crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_02_bool_true.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--scopes"
  stdin: true;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m(program
   (expr true))
[38;2;170;034;255m[1m=> true[0m
[0mλ» [1m[0m
----- stderr -----
