crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_05_comment.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: "// comment\n4 + 4;"
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m[0mλ» [1m[0m[38;2;170;034;255m[1m=> 8[0m
[0mλ» [1m[0m
----- stderr -----
