crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_08_multiline_input.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--scopes"
  stdin: "4\n>\n2;"
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m[0m.. [1m[0m[0m.. [1m[0m(program
   (expr (> 4.0 2.0)))
[38;2;170;034;255m[1m=> true[0m
[0mλ» [1m[0m
----- stderr -----
