crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_09_print_statement.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--scopes"
  stdin: print nil;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m(program
   (print nil))
nil
[0mλ» [1m[0m
----- stderr -----
