crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_10_print_statement.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--scopes"
  stdin: print 42 > 27;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m(program
   (print (> 42.0 27.0)))
true
[0mλ» [1m[0m
----- stderr -----
