crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_11_print_multiline.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: "print  \n  \"string\";"
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m[0m.. [1m[0mstring
[0mλ» [1m[0m
----- stderr -----
