crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_12_multiple_statements.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--scopes"
  stdin: print 42; print 27;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m(program
   (print 42.0)
   (print 27.0))
42
27
[0mλ» [1m[0m
----- stderr -----
