crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_13_print_print.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: print print 42;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m[0mλ» [1m[0m
----- stderr -----
[line 1] Error at 'print': Expect expression.
