crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_14_variable_declaration.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--scopes"
  stdin: var x = 42;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m(program
   (var x (global @1) 42.0))
[0mλ» [1m[0m
----- stderr -----
